src/app/components/confections/confection-detail/confection-detail.component.scss
@import 'abstracts/variables';
@import 'components/buttons';

.confection-detail {
    &__row{
        display: flex;
        flex-wrap: wrap;
        padding: 1.5rem 0px 1.25rem 0px;

        @media (max-width:767px) {
            flex-direction: column; 
        }
    }

    &__title {
        color: #262626;
        font-weight: 700;
        text-transform: uppercase;
        font-size: 2.25rem;
        line-height: 1.7;
        margin-bottom: 0.667em; // 24px
    }

    &__image {
        flex: 0 1 40%;

        img {
            border: 4px solid #F8F8F8;
            padding: 0.4375rem;

            max-width: 100%;
            max-height: 100%;
        }
    }

    &__body {
        flex: 0 1 60%;
        padding: 0px 3em;
    }

    // pivot with short-details
    &__pivot{
        margin-bottom: 1rem;
    }

    &__description {
        font-size: 1.10rem; // 17,6
        line-height: 1.7;
        margin-bottom: 1.36em; 
    }

    &__weight {
        font-size: 1.4rem; // 22,4
        font-weight: 500;
        margin-bottom: 1.07em;
    }

    &__limitaion-lable {
        font-size: .95rem;
        font-weight: 200;
        color: $dark-red;
        margin: 0 0 0.5em 0;
    }

    &__price {
        font-size: 2.5rem;
        font-weight: 600;
        margin-bottom: 1em;

        &--lable{
            font-size: 1rem;
            color: grey;
            font-weight: 200;
        }
    }

    // form controls
    &__form {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;

        margin-bottom: 3rem;
    }

    &__quantity-counter {
        input {
            height: 2.875rem;
            width: 2.5rem;
            font-size: 1rem;
            font-weight: 400;
            border: 1px solid #ced4da;
            border-radius: 0.25rem;
            padding: 0.1875em 0.4375em;
            margin-right: 1rem;
        }
    }

    &__order-button {
        @extend %deault-button;
    }
}

.nav-tab {
    display: flex;
    border-bottom: 1px solid #dee2e6;

    &__item {
        margin-bottom: -1px;

        a {
            font-size: 1.15rem;
            color: rgb(65, 65, 65);
            font-weight: 700;
            background-color: #fff;
            border-color: #dee2e6 #dee2e6 #fff;
        }
    }

    &__link {
        display: block;
        padding: 0.5rem 1rem;

        border: 1px solid transparent;
        border-top-left-radius: 0.25rem;
        border-top-right-radius: 0.25rem;
    }
}

.delivery-section {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;

	&__item { 
        display: flex;
        flex-direction: row;

        font-size: .875rem;
        font-weight: 500;
        text-transform: uppercase;
    }

    &__pickup-icon::before{
        display: inline-block;
        content: '';
        background-image: url('/assets/icons/delivered.png');
        background-size: 40px 40px;
        height: 40px;
        width: 40px;
        margin: 0px 0.80em 0px 0px;
    }

    &__delivery-icon::before{
        display: inline-block;
        content: '';
        background-image: url('/assets/icons/fast-delivery.png');
        background-size: 40px 40px;
        height: 40px;
        width: 40px;
        margin: 0px 0.80em 0px 0px;
    }

    &__yandex-icon::before{
        display: inline-block;
        content: '';
        background-image: url('/assets/icons/taxi.png');
        background-size: 40px 40px;
        height: 40px;
        width: 40px;
        margin: 0px 0.80em 0px 0px;
    }
}

